--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,7 +13,8 @@ pages:
     - '信息流廣告': 'docs/stream-ad.md'
     - '內文廣告': 'docs/content-ad.md'
   - 'SDK 整合':
-    - '註冊背景工作': 'docs/register-background-task.md'
-    - '註冊背景抓取': 'docs/register-background-fetch.md'
+    - '註冊背景工作 (background task)': 'docs/register-background-task.md'
+    - '註冊背景抓取 (background fetch)': 'docs/register-background-fetch.md'
     - '廣告預覽': 'docs/ad-preview.md'
+- 範例源碼: 'docs/sample-code.md'
 - 疑難排解: 'docs/trouble-shooting.md'
