add open splash document

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,6 +16,9 @@ pages:
     - '註冊背景工作 (background task)': 'docs/register-background-task.md'
     - '註冊背景抓取 (background fetch)': 'docs/register-background-fetch.md'
     - '廣告預覽': 'docs/ad-preview.md'
+- 建議廣告版位:
+    - '開機蓋屏': 'docs/open-splash-ad.md'
+    - '插頁蓋屏': 'docs/interstitial-ad.md'
 - 範例源碼: 'docs/sample-code.md'
 - 疑難排解: 'docs/trouble-shooting.md'
 - API 參考: 'docs/api-reference.md'
